Allow compilation of core.pv with Java 8
.. for use in Display Builder Web Runtime on Tomcat and J8